[tool.poetry]
name = "VIPLOD_brain_games"
version = "0.1.0"
description = ""
authors = ["Viplod <viplod@yandex.ru>"]
packages = [
	{ include = "brain_games"},
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:brain_even"

[tool.poetry.dependencies]
python = "3.6.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
